--- a/css/master.css
+++ b/css/master.css
@@ -15,7 +15,7 @@ li {
 
 .c-navbar_right_button--search {
     width: 40px;
-    height: 40px;
+    height: 38px;
     display: block;
 }
 
@@ -33,7 +33,7 @@ ul.c-navbar {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgba(220, 220, 220, 0.75);
+    background-color: rgba(254,255,251,0.7);
     z-index: 999;
     text-align: center;
 }
@@ -132,7 +132,7 @@ ul.c-navbar li.c-navbar_right span._add-spacing {
 .c-mainsection {
     background: url("../img/park.png") no-repeat top center;
     background-size: cover;
-    padding: 450px 0px;
+    padding: 370px 0px;
     width: 100%;
     z-index: 1;
 }
@@ -158,23 +158,32 @@ ul.c-navbar li.c-navbar_right span._add-spacing {
     margin: auto;
     width: 65%;
     z-index: 99;
-    padding-top: 40px;
+    padding-top: 100px;
 }
 
 .c-mainsection_jumbo {
     font-size: 14px;
-    font-family: 'Open Sans', sans-serif;
+
     color: rgb(220, 223, 226);
     font-weight: 600;
-    text-shadow: 2px 2px black;
 }
 
 .c-mainsection_jumbo--paragraph {
-    width: 50%;
+    width: 438px;
+    height: 37px;
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .jumbo_header {
+    opacity: 0.78;
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
     font-size: 35px;
+    font-weight: 700;
 }
 
 .c-secondsection {
@@ -186,24 +195,35 @@ ul.c-navbar li.c-navbar_right span._add-spacing {
 }
 
 .c-secondsection--header {
+    color: #222626;
+    font-family: 'Open Sans', sans-serif;
     font-size: 35px;
-    font-weight: 100;
-    color: #000;
+    font-weight: 300;
+    line-height: 24px;
 }
 
 .c-secondsection--firstparagraphs {
     flex: 1;
     margin-right: 20px;
+    color: #959595;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .c-secondsection--secondparagraphs {
     flex: 1;
-    margin-top: 110px;
+    margin-top: 133px;
+    color: #959595;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .c-secondsection--paragraph {
     padding-bottom: 10px;
-    font-size: 14px;
 }
 
 .c-thirdsection {
@@ -245,30 +265,29 @@ ul.c-navbar li.c-navbar_right span._add-spacing {
 }
 
 .c-thirdsection--header {
-    font-size: 25px;
+    width: 147px;
+    height: 24px;
+    color: #ffffff;
     font-family: 'Open Sans', sans-serif;
-    color: #fff;
-    font-weight: 100;
+    font-size: 30px;
+    font-weight: 300;
 }
 
 .c-thirdsection--paragraph {
-    font-size: 14px;
+    color: #ffffff;
     font-family: 'Open Sans', sans-serif;
-    color: #fff;
-    padding-bottom: 20px;
-    font-weight: 100;
-    line-height: 130%;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .c-thirdsection--link {
-    font-size: 14px;
+    color: #ffffff;
     font-family: 'Open Sans', sans-serif;
-    color: #fff;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
     text-decoration: none;
-    vertical-align: bottom;
-    position: absolute;
-    bottom: 20px;
 }
 
 .js-items-to-slide {
