--- a/css/master.css
+++ b/css/master.css
@@ -133,14 +133,15 @@ ul.c-navbar li.c-navbar_right span._add-spacing {
     background: url("../img/park.png") no-repeat top center;
     background-size: cover;
     padding: 370px 0px;
+    max-width: 100%;
+    position: relative;
     width: 100%;
-    z-index: 1;
 }
 
 .o-phone {
     margin: auto;
     width: 70%;
-    z-index: 0;
+    z-index: 1;
     position: relative;
     padding-top: 0px;
 }
@@ -409,6 +410,15 @@ input[type=text] {
 .o-navbar_search_button:active .o-navbar_menu_button:active {
     outline: none 0;
     opacity: 0;
+}
+
+.js-small-navbar {
+    width: 100%;
+    height: 94px !important;
+}
+.js-small-navbar-li{
+    padding-top: 20px !important;
+
 }
 
 @-webkit-keyframes slidein {
@@ -690,5 +700,29 @@ input[type=text] {
     .c-thirdsection_first_row,
     .c-thirdsection_second_row {
         display: block;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .c-mainsection_jumbo, .c-secondsection{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .c-secondsection{
+        width: 95%;
+    }
+    .c-mainsection_jumbo--paragraph{
+        width: 55%;
+    }
+    .c-thirdsection {
+        margin: 0;
+        width: 100%;
+    }
+
+}
+
+@media screen and (min-width: 1050px){
+    ul.c-navbar li.c-navbar_center{
+        padding-left: 500px;
     }
 }
